Reformat code with IntelliJ